<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <LinearLayout
        android:id="@+id/rv_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:minWidth="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rv_refresh_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_hint_refresh_normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_hint_refresh_time"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/last_refresh_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/rv_header_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/rv_header_text"
        android:layout_toStartOf="@id/rv_header_text"
        android:contentDescription="@string/icon"
        android:src="@mipmap/arrow_down" />

    <ProgressBar
        android:id="@+id/rv_header_progressbar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/rv_header_text"
        android:layout_toStartOf="@id/rv_header_text" />

</RelativeLayout>